@@ -1,3 +1,9 @@
+2008-04-02  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_menu_add_devices): fix # of devices logic; handle CDMA & GSM
+			devices too
+
 2008-04-01  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/nm-connection-list.c
